--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 PORT=8080
-MONGO_URL=mongodb+srv://newuser_1:abc12345@cluster0.lvqb72a.mongodb.net/Ecommerce;
-SECRET_KEY='hassan';
+MONGO_URL=;
+SECRET_KEY='';
 
-#MONGO_URL=mongodb+srv://newuser_1:*****@cluster0.lvqb72a.mongodb.net/dtecherz/saim
+#MONGO_URL=
